# token-sentinel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
npm/: index.js  install.js  package.json
scripts/: install.sh
src/layout/: mod.rs
src/widgets/: agent_name.rs  api_duration.rs  block_timer.rs  context.rs  cost.rs  custom_command.rs  custom_text.rs  cwd.rs  duration.rs  exceeds_tokens.rs  git_branch.rs  git_status.rs  git_worktree.rs  lines_changed.rs  model.rs  output_style.rs  separator.rs  session_id.rs  terminal_width.rs  tokens.rs  version.rs  vim_mode.rs
