[package]
name = "ai-statusline"
version = "1.0.0"
edition = "2024"
description = "Customizable status line for AI coding assistants - real-time model, tokens, cost, git status display"
license = "MIT"
repository = "https://github.com/mstuart/ai-statusline"
keywords = ["ai-coding", "statusline", "terminal", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
unicode-width = "0.2"
dirs = "6"
ratatui = "0.29"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[features]
default = []
online-license = ["reqwest", "tokio"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
